--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "byline": "~2.1.1",
     "kue": "~0.6.2",
     "underscore": "~1.5.2",
-    "dateformat": "^1.0.7-1.2.3"
+    "dateformat": "^1.0.7-1.2.3",
+    "moment": "^2.8.3"
   },
   "devDependencies": {},
   "scripts": {
