--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "escidoc-cmdi-pid-workflow",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Workflow to create new CMDI md record and assign PIDs to existing resources in clarin.dk",
   "main": "./workflow.js",
   "bin": {
     "escidoc-cmdi-pid-workflow": "bin/start"
   },
   "dependencies": {
-    "libxmljs": "~0.8.1",
-    "libxsltjs": "~0.1.2",
+    "libxmljs": "~0.16.0",
+    "libxslt": "^0.5.0",
     "utile": "~0.2.0",
     "byline": "~2.1.1",
-    "kue": "~0.6.2",
+    "kue": "~0.8.x",
     "underscore": "~1.5.2",
     "dateformat": "^1.0.7-1.2.3",
     "moment": "^2.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "start": "./lib/workflow.js"
   },
