--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "escidoc-cmdi-pid-workflow",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "description": "Workflow to create new CMDI md record and assign PIDs to existing resources in clarin.dk",
   "main": "./workflow.js",
   "bin": {
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "libxslt": "^0.6.0",
-    "utile": "~0.2.0",
+    "utile": "~0.3.0",
     "byline": "~2.1.1",
-    "kue": "~0.8.x",
-    "underscore": "~1.5.2",
+    "kue": "~0.10.x",
+    "underscore": "~1.8.3",
     "dateformat": "^1.0.7-1.2.3",
-    "moment": "^2.8.3"
+    "moment": "~2.11.x"
   },
   "devDependencies": {
   },
