--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "kue": "~0.10.x",
     "underscore": "~1.8.3",
     "dateformat": "^1.0.7-1.2.3",
-    "moment": "~2.11.x"
+    "moment": "~2.11.x",
+    "q": "~1.4.x"
   },
   "devDependencies": {
   },
