--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+npm-debug.log
 nohup.out
-output
-output-test
-test
-data/xmllint
-data/xslt/old
-node_modules
+output/
+output-test/
+test/
+data/xmllint/
+data/xslt/old/
+node_modules/
